--- a/TrainApi/app/src/main/res/values/colors.xml
+++ b/TrainApi/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#94F688</color>
+    <color name="blue">#042567</color>
 </resources>
