--- a/TrainApi/app/src/main/res/layout/activity_main.xml
+++ b/TrainApi/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
-    android:gravity="center"
+    android:gravity="center_horizontal"
     >
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -15,7 +15,6 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_margin="20dp"
         >
-
         <EditText
             android:id="@+id/train_no_name"
             android:layout_width="match_parent"
@@ -36,4 +35,52 @@
         android:layout_margin="10dp"
         />
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        >
+        <EditText
+            android:id="@+id/pnrNo"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="🚉 PNR Number"
+            android:padding="10dp"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+    <Button
+        android:id="@+id/pnrBtn"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Find PNR Status"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:background="@color/green"
+        android:padding="10dp"
+        android:layout_margin="10dp"
+        />
+    <!-- Add a View with layout_weight to push AdView to the bottom -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+    <com.google.android.gms.ads.AdView
+        xmlns:ads = "http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId = "ca-app-pub-3940256099942544/9214589741"
+        >
+    </com.google.android.gms.ads.AdView>
+
 </LinearLayout>
+
+<!--
+dummy: ca-app-pub-3940256099942544/9214589741
+real: ca-app-pub-5407774234677570/6353284578
+-->
