--- a/TrainApi/app/src/main/res/layout/activity_train.xml
+++ b/TrainApi/app/src/main/res/layout/activity_train.xml
@@ -10,21 +10,62 @@
     android:gravity="start"
     >
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Train Details:"
-        android:textSize="26sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:textColor="@color/blue"
+        android:orientation="horizontal"
         android:padding="8dp"
-        android:layout_margin="8dp"
-        />
+        >
+        <ImageView
+            android:id="@+id/backBtnId"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/back_arrow"
+            android:layout_margin="8dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Train Details:"
+            android:textSize="26sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textColor="@color/blue"
+            android:layout_margin="8dp"
+            />
+        <TextView
+            android:id="@+id/watchAd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Watch Ads"
+            android:textSize="20sp"
+            android:padding="5sp"
+            android:background="@color/green"
+            android:layout_margin="8dp"
+            />
+    </LinearLayout>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/recyclerView"
-        />
+        >
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <!-- Add a View with layout_weight to push AdView to the bottom -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+    <com.google.android.gms.ads.AdView
+        xmlns:ads = "http://schemas.android.com/apk/res-auto"
+        android:id="@+id/trainAdView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId = "ca-app-pub-3940256099942544/9214589741"
+        >
+    </com.google.android.gms.ads.AdView>
 
 </LinearLayout>
