--- a/TrainApi/app/src/main/res/layout/train_row.xml
+++ b/TrainApi/app/src/main/res/layout/train_row.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="7dp"
+        android:layout_margin="5dp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -28,27 +29,30 @@
                 <TextView
                     android:id="@+id/trainNo"
                     android:layout_width="120dp"
-                    android:layout_height="40dp"
+                    android:layout_height="45dp"
                     android:background="@color/blue"
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     android:textSize="26sp"
                     android:gravity="center"
+                    android:text="12235"
                     />
                 <TextView
                     android:id="@+id/trainName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="22sp"
+                    android:textColor="@color/blue"
                     android:textStyle="bold"
                     android:layout_margin="10dp"
                     android:gravity="center"
+                    android:text="Sealdah Budge Budge Local"
                     />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="4dp"
+                android:padding="5dp"
                 >
                 <TextView
                     android:id="@+id/trainFrom"
@@ -57,6 +61,7 @@
                     android:textSize="20sp"
                     android:layout_margin="5dp"
                     android:gravity="center"
+                    android:text="SED"
                     />
                 <TextView
                     android:id="@+id/trainTo"
@@ -65,28 +70,52 @@
                     android:textSize="20sp"
                     android:layout_margin="5dp"
                     android:gravity="center"
+                    android:text="BUD"
+                    />
+                <TextView
+                    android:id="@+id/trainDays"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:layout_margin="5dp"
+                    android:gravity="center"
+                    android:text="Available: Thru, FRi, Sat, SUND "
                     />
             </LinearLayout>
+            <TextView
+                android:id="@+id/trainClass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:padding="10dp"
+                android:gravity="center"
+                android:text="Classes : Unreserved"
+                />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
+                android:orientation="vertical"
                 >
                 <TextView
                     android:id="@+id/arrivalTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
-                    android:layout_margin="5dp"
+                    android:layout_margin="0dp"
+                    android:padding="05dp"
                     android:gravity="center"
+                    android:text="Arrival Time: "
                     />
                 <TextView
                     android:id="@+id/departureTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
-                    android:layout_margin="5dp"
+                    android:layout_marginTop="2dp"
+                    android:padding="5dp"
                     android:gravity="center"
+                    android:text="Departure Time: "
                     />
             </LinearLayout>
         </LinearLayout>
