--- a/TrainApi/app/src/main/res/layout/activity_main.xml
+++ b/TrainApi/app/src/main/res/layout/activity_main.xml
@@ -71,9 +71,9 @@
     <com.google.android.gms.ads.AdView
         xmlns:ads = "http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        ads:adSize="BANNER"
+        ads:adSize="SMART_BANNER"
         ads:adUnitId = "ca-app-pub-3940256099942544/9214589741"
         >
     </com.google.android.gms.ads.AdView>
