--- a/TrainApi/app/src/main/res/layout/activity_train.xml
+++ b/TrainApi/app/src/main/res/layout/activity_train.xml
@@ -44,26 +44,19 @@
             android:layout_margin="8dp"
             />
     </LinearLayout>
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/recyclerView"
-        >
-    </androidx.recyclerview.widget.RecyclerView>
-
-    <!-- Add a View with layout_weight to push AdView to the bottom -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:scrollbars="vertical"
+                />
     <com.google.android.gms.ads.AdView
         xmlns:ads = "http://schemas.android.com/apk/res-auto"
         android:id="@+id/trainAdView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        ads:adSize="BANNER"
+        ads:adSize="SMART_BANNER"
         ads:adUnitId = "ca-app-pub-3940256099942544/9214589741"
         >
     </com.google.android.gms.ads.AdView>
