--- a/TrainApi/app/src/main/res/layout/activity_train.xml
+++ b/TrainApi/app/src/main/res/layout/activity_train.xml
@@ -33,14 +33,14 @@
             android:textColor="@color/blue"
             android:layout_margin="8dp"
             />
-        <TextView
+        <Button
             android:id="@+id/watchAd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Watch Ads"
-            android:textSize="20sp"
-            android:padding="5sp"
-            android:background="@color/green"
+            android:textSize="18sp"
+            android:padding="10sp"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_margin="8dp"
             />
     </LinearLayout>
